--- a/Lab 6/Lab 6.ipynb
+++ b/Lab 6/Lab 6.ipynb
@@ -36,7 +36,7 @@
           "height": 129
         },
         "id": "q8kd2kc92kh7",
-        "outputId": "42bb173a-f67a-4b45-c977-fbe8ac507cc0"
+        "outputId": "7e8f90f7-659b-4206-cf10-9e1f5c02c87a"
       },
       "outputs": [
         {
@@ -237,7 +237,7 @@
           "height": 98
         },
         "id": "hnR1Y8ClSSb9",
-        "outputId": "cc2e95b3-aba6-4179-c6e2-ae861d60e943"
+        "outputId": "cb560e99-295a-4b2e-8f29-f84ce780333b"
       },
       "execution_count": null,
       "outputs": [
@@ -280,7 +280,7 @@
           "height": 34
         },
         "id": "JS8kB0M4VzPE",
-        "outputId": "c6ecb4bd-b498-4125-cd68-50ee130ae232"
+        "outputId": "b2cc18b7-45d5-4f45-df07-e9e2579bcc55"
       },
       "execution_count": null,
       "outputs": [
@@ -313,7 +313,7 @@
           "height": 34
         },
         "id": "m-BSVzSQW36D",
-        "outputId": "3ee667c0-655b-4e37-fe4c-661940da7e9f"
+        "outputId": "8b50e466-0f6f-4117-d989-af4b5b20958c"
       },
       "execution_count": null,
       "outputs": [
@@ -337,7 +337,7 @@
       "cell_type": "code",
       "source": [
         "# Абсолютная пропускная способность\n",
-        "lambdaAbs <- sum(solInf[5:10])* mu\n",
+        "lambdaAbs <- sum(solInf[5:7])* mu + sum(solInf[8:9]) * 2 * mu + solInf[10] * 3 * mu\n",
         "lambdaAbs"
       ],
       "metadata": {
@@ -346,7 +346,7 @@
           "height": 34
         },
         "id": "ATTuk4ggZNXK",
-        "outputId": "e1733915-d44d-451e-d7b1-8c3d1534432e"
+        "outputId": "29815ff4-c6d2-4bb1-ad35-b24e4fdba183"
       },
       "execution_count": null,
       "outputs": [
@@ -354,12 +354,12 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "0.292153998179572"
+              "0.328926599415791"
             ],
-            "text/markdown": "0.292153998179572",
-            "text/latex": "0.292153998179572",
+            "text/markdown": "0.328926599415791",
+            "text/latex": "0.328926599415791",
             "text/plain": [
-              "[1] 0.292154"
+              "[1] 0.3289266"
             ]
           },
           "metadata": {}
@@ -379,7 +379,7 @@
           "height": 34
         },
         "id": "les5s-tbY1h5",
-        "outputId": "7ab63d47-afc5-4654-ca2c-b625d8534a05"
+        "outputId": "a5f18eec-2ad1-4a89-f4d2-365cc6577ab8"
       },
       "execution_count": null,
       "outputs": [
@@ -519,7 +519,7 @@
           "height": 192
         },
         "id": "eyyNPNxf4JUe",
-        "outputId": "c5e28c53-7722-48ea-b995-10a0e49ba4e9"
+        "outputId": "2eba8746-2147-4eee-82e4-3b1f7aa3fbc0"
       },
       "execution_count": null,
       "outputs": [
@@ -535,13 +535,13 @@
               "</thead>\n",
               "<tbody>\n",
               "\t<tr><th scope=row>Среднее число заявок в системе</th><td>1.1353785</td><td>0.8609356</td><td>0.7180209</td><td>0.7524124</td></tr>\n",
-              "\t<tr><th scope=row>Абсолютная пропускная способность</th><td>0.4718286</td><td>0.9436571</td><td>1.3321764</td><td>0.2921540</td></tr>\n",
+              "\t<tr><th scope=row>Абсолютная пропускная способность</th><td>0.4718286</td><td>0.9436571</td><td>1.3321764</td><td>0.3289266</td></tr>\n",
               "\t<tr><th scope=row>Среднее время пребывания заявки в системе</th><td>3.6233183</td><td>2.3949877</td><td>1.8723280</td><td>1.9920297</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA data.frame: 3 × 4\n\n| <!--/--> | Lsys2 = 1 &lt;dbl&gt; | Lsys2 = 2 &lt;dbl&gt; | Lsys2 = 3 &lt;dbl&gt; | Уравнения Колмогорова &lt;dbl&gt; |\n|---|---|---|---|---|\n| Среднее число заявок в системе | 1.1353785 | 0.8609356 | 0.7180209 | 0.7524124 |\n| Абсолютная пропускная способность | 0.4718286 | 0.9436571 | 1.3321764 | 0.2921540 |\n| Среднее время пребывания заявки в системе | 3.6233183 | 2.3949877 | 1.8723280 | 1.9920297 |\n\n",
-            "text/latex": "A data.frame: 3 × 4\n\\begin{tabular}{r|llll}\n  & Lsys2 = 1 & Lsys2 = 2 & Lsys2 = 3 & Уравнения Колмогорова\\\\\n  & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\tСреднее число заявок в системе & 1.1353785 & 0.8609356 & 0.7180209 & 0.7524124\\\\\n\tАбсолютная пропускная способность & 0.4718286 & 0.9436571 & 1.3321764 & 0.2921540\\\\\n\tСреднее время пребывания заявки в системе & 3.6233183 & 2.3949877 & 1.8723280 & 1.9920297\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA data.frame: 3 × 4\n\n| <!--/--> | Lsys2 = 1 &lt;dbl&gt; | Lsys2 = 2 &lt;dbl&gt; | Lsys2 = 3 &lt;dbl&gt; | Уравнения Колмогорова &lt;dbl&gt; |\n|---|---|---|---|---|\n| Среднее число заявок в системе | 1.1353785 | 0.8609356 | 0.7180209 | 0.7524124 |\n| Абсолютная пропускная способность | 0.4718286 | 0.9436571 | 1.3321764 | 0.3289266 |\n| Среднее время пребывания заявки в системе | 3.6233183 | 2.3949877 | 1.8723280 | 1.9920297 |\n\n",
+            "text/latex": "A data.frame: 3 × 4\n\\begin{tabular}{r|llll}\n  & Lsys2 = 1 & Lsys2 = 2 & Lsys2 = 3 & Уравнения Колмогорова\\\\\n  & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\tСреднее число заявок в системе & 1.1353785 & 0.8609356 & 0.7180209 & 0.7524124\\\\\n\tАбсолютная пропускная способность & 0.4718286 & 0.9436571 & 1.3321764 & 0.3289266\\\\\n\tСреднее время пребывания заявки в системе & 3.6233183 & 2.3949877 & 1.8723280 & 1.9920297\\\\\n\\end{tabular}\n",
             "text/plain": [
               "                                          Lsys2 = 1 Lsys2 = 2 Lsys2 = 3\n",
               "Среднее число заявок в системе            1.1353785 0.8609356 0.7180209\n",
@@ -549,7 +549,7 @@
               "Среднее время пребывания заявки в системе 3.6233183 2.3949877 1.8723280\n",
               "                                          Уравнения Колмогорова\n",
               "Среднее число заявок в системе            0.7524124            \n",
-              "Абсолютная пропускная способность         0.2921540            \n",
+              "Абсолютная пропускная способность         0.3289266            \n",
               "Среднее время пребывания заявки в системе 1.9920297            "
             ]
           },
@@ -586,7 +586,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Va6DfQy4Y7L3",
-        "outputId": "4110ca0c-10e2-4fec-93b2-815516d69d79"
+        "outputId": "f75bcae0-f63f-4489-f110-cc7ce937a455"
       },
       "execution_count": null,
       "outputs": [
@@ -660,7 +660,7 @@
         "  add_generator(\"Programmer1|\", m1.queue, function() rexp(1, lambda)) %>% # Создание генератора Программист 1\n",
         "  add_generator(\"Programmer2|\", m2.queue, function() rexp(1, lambda)) %>% # Создание генератора Программист 2\n",
         "  add_generator(\"Programmer3|\", m3.queue, function() rexp(1, lambda)) %>% # Создание генератора Программист 3\n",
-        "  run(until=500000)\n",
+        "  run(until=10000)\n",
         "\n",
         "# Проведение 500 экспериментов\n",
         "mm.envs <- lapply(1:500, function(i) {mm.env})"
@@ -684,7 +684,7 @@
           "height": 34
         },
         "id": "Y0FleWQNf_yO",
-        "outputId": "90dc84b5-0c9c-4625-ddb2-95acd577163f"
+        "outputId": "87ba809e-cb78-44d3-a54a-e0deb5103cbd"
       },
       "execution_count": null,
       "outputs": [
@@ -692,12 +692,12 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "0.7"
+              "0.768292682926829"
             ],
-            "text/markdown": "0.7",
-            "text/latex": "0.7",
+            "text/markdown": "0.768292682926829",
+            "text/latex": "0.768292682926829",
             "text/plain": [
-              "[1] 0.7"
+              "[1] 0.7682927"
             ]
           },
           "metadata": {}
@@ -709,7 +709,7 @@
       "source": [
         "# Абсолютная ппропускная способность\n",
         "resourceDataServer <- resourceData[resourceData$resource == \"server\",]\n",
-        "(sum(resourceDataServer$server > 0)/length(resourceDataServer$server))*mu"
+        "(sum(resourceDataServer$server == 1)/length(resourceDataServer$server))*mu + (sum(resourceDataServer$server == 2)/length(resourceDataServer$server))* 2 * mu + (sum(resourceDataServer$server == 3)/length(resourceDataServer$server)) * 3 * mu"
       ],
       "metadata": {
         "colab": {
@@ -717,7 +717,7 @@
           "height": 34
         },
         "id": "1aZrhnkSiwO2",
-        "outputId": "26c83449-981e-4ec6-e647-12e605a06d1d"
+        "outputId": "bd1d8195-0ae4-4db6-c243-d733c301a54f"
       },
       "execution_count": null,
       "outputs": [
@@ -725,12 +725,12 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "0.56180913026245"
+              "0.620946933447972"
             ],
-            "text/markdown": "0.56180913026245",
-            "text/latex": "0.56180913026245",
+            "text/markdown": "0.620946933447972",
+            "text/latex": "0.620946933447972",
             "text/plain": [
-              "[1] 0.5618091"
+              "[1] 0.6209469"
             ]
           },
           "metadata": {}
@@ -750,7 +750,7 @@
           "height": 34
         },
         "id": "jxKiS1F-esb7",
-        "outputId": "6837696c-eb6f-4006-9d3b-19faa7dca1a6"
+        "outputId": "2c729ae6-9087-4214-e3b6-1a5156e10f26"
       },
       "execution_count": null,
       "outputs": [
@@ -758,12 +758,12 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "1.77357233995504"
+              "2.05323688219597"
             ],
-            "text/markdown": "1.77357233995504",
-            "text/latex": "1.77357233995504",
+            "text/markdown": "2.05323688219597",
+            "text/latex": "2.05323688219597",
             "text/plain": [
-              "[1] 1.773572"
+              "[1] 2.053237"
             ]
           },
           "metadata": {}
